fixed dark mode

--- a/styles/about.css
+++ b/styles/about.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 55ch;
     margin-top: 40px;
-    background-image: url('./../images/image4.jpg');
+    background-image: url('./../images/about-us.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -18,6 +18,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.637)
 }
 .abt-h {
     font-size: 30px;
